fix:overflow

--- a/css/app.css
+++ b/css/app.css
@@ -105,10 +105,11 @@ p {
   background-image: var(--hero-image);
   background-repeat: no-repeat;
   background-size: cover;
-  /* background-position: center; */
+  background-position: center;
   background-attachment: fixed;
+  overflow: hidden;
   width: 100%;
-  max-height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
